# dev-chat

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/chat_app/: asgi.py  middleware.py  settings.py  urls.py
src/common/: apis.py
src/inbox/: consumers.py  models.py  routings.py
src/inbox/migrations/: 0001_initial.py
src/user_auth/: admin.py  models.py  serializers.py  urls.py  views.py
src/user_auth/api/: serializers.py  views.py
src/user_auth/migrations/: 0001_initial.py  0002_rename_id_user_uuid.py  0003_chatgroup_usergroup.py
