[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["sudomanoj <manoj.765421@bumc.tu.edu.np>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
